market information button resizing

--- a/client/src/components/Marketplace/MarketInformation/_MarketInformation.scss
+++ b/client/src/components/Marketplace/MarketInformation/_MarketInformation.scss
@@ -118,7 +118,7 @@
 .history-tab {
     align-self: center;
     justify-self: center;
-    height: 2vh;
+    height: 15px;
     font-size: 60%;
     transition: .5s ease;
     padding-top: .75%;
@@ -176,7 +176,7 @@
     text-transform: uppercase;
 
     padding: 3% 4%;
-    font-size: 1.75vh;
+    font-size: 13px;
     font-weight: 300;
 
     &:hover {
