--- a/client/src/components/Collection/YourCards/_YourCards.scss
+++ b/client/src/components/Collection/YourCards/_YourCards.scss
@@ -78,7 +78,8 @@
     background-color: transparent;
     transition: .5s ease;
     padding-left: 3.25%;
-    margin-left: 25%;
+    padding-right: 3.25%;
+    margin-left: 9.25%;
     font-family: 'Ubuntu Mono', monospace;
 
 
@@ -136,7 +137,7 @@
 
     &:nth-child(1) {
         // margin-top: -5%;
-        margin-bottom: -5%;
+        // margin-bottom: -5%;
     }
 }
 
@@ -151,7 +152,7 @@
     // margin-right: 7.5%;
 
     &:nth-of-type(1) {
-        margin-bottom: -32.75%;
+        margin-bottom: -25.75%;
     }
 
     b {
@@ -171,7 +172,7 @@
     padding-top: .5%;
     padding-bottom: .5%;
     padding-left: 1.5%;
-    padding-right: -2%;
+    padding-right: 2%;
     transition: .5s ease;
 
     &:focus {
@@ -260,8 +261,9 @@
     position: relative;
     cursor: pointer;
     text-transform: uppercase;
+    margin-left:5%;
     font-size: 23px;
-    margin-right: 4.5%;
+    // margin-right: 10%;
 }
 
 .sort-choice input[type="radio"] {
@@ -274,7 +276,7 @@
     display: block;
     // background-color: rgba(35, 35, 35, 0.288);
     text-align: center;
-    padding: 0.55em .5em;
+    padding: 10px 25px;
     box-sizing: border-box;
     color: rgba(127, 126, 126, 0.747);
     border-radius: 0.2em;
