--- a/client/src/index.css
+++ b/client/src/index.css
@@ -933,7 +933,8 @@
   background-color: transparent;
   transition: 0.5s ease;
   padding-left: 3.25%;
-  margin-left: 25%;
+  padding-right: 3.25%;
+  margin-left: 9.25%;
   font-family: "Ubuntu Mono", monospace;
   background-color: rgba(35, 35, 35, 0.898);
 }
@@ -977,10 +978,6 @@
   background-color: rgba(35, 35, 35, 0.898);
   transition: 0.5 ease;
 }
-.count-container:nth-child(1) {
-  margin-bottom: -5%;
-}
-
 .yourCards-Cards-Count {
   text-transform: uppercase;
   align-self: center;
@@ -991,7 +988,7 @@
   padding-top: 0.75%;
 }
 .yourCards-Cards-Count:nth-of-type(1) {
-  margin-bottom: -32.75%;
+  margin-bottom: -25.75%;
 }
 .yourCards-Cards-Count b {
   margin-left: 5%;
@@ -1007,7 +1004,7 @@
   padding-top: 0.5%;
   padding-bottom: 0.5%;
   padding-left: 1.5%;
-  padding-right: -2%;
+  padding-right: 2%;
   transition: 0.5s ease;
 }
 .search-input:focus {
@@ -1082,8 +1079,8 @@
   position: relative;
   cursor: pointer;
   text-transform: uppercase;
+  margin-left: 5%;
   font-size: 23px;
-  margin-right: 4.5%;
 }
 
 .sort-choice input[type=radio] {
@@ -1095,7 +1092,7 @@
   width: 100%;
   display: block;
   text-align: center;
-  padding: 0.55em 0.5em;
+  padding: 10px 25px;
   box-sizing: border-box;
   color: rgba(127, 126, 126, 0.747);
   border-radius: 0.2em;
