--- a/client/src/components/Card/_Card.scss
+++ b/client/src/components/Card/_Card.scss
@@ -1,13 +1,16 @@
 @use '../../styles';
 
+$cardWidth : 235px;
+$cardHeight : 340px;
+
 .charCard {
     margin: 4px;
     transform: scale(1);
     perspective: 600px;
     cursor: pointer;
     background-color: styles.$bg;
-    width: 275px;
-    height: 375px;
+    width: $cardWidth;
+    height: $cardHeight;
     border-radius: 5px;
     transition: .5s ease;
     text-transform: uppercase;
@@ -36,12 +39,11 @@
     }
 
     .charCard-image {
-        height: 305px;
-        width: 275px;
-
+        height: 285px;
+        width: $cardWidth;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
-        margin-bottom: 5%;
+        margin-bottom: 3.25%;
         filter: grayscale(100%);
         border-bottom: 3px solid rgba(255, 255, 255, 0.584);
     }
@@ -49,34 +51,32 @@
     .charCard-text {
         align-self: flex-start;
         margin-left: 2.5%;
-        font-size: smaller;
+        // font-size: smaller; //10px
         cursor: default;
-
     }
 
     .charCard-name {
         // margin-right: 2.5%;
-        font-size: small;
-        margin-top: 2%;
+        font-size: 13px; // 13px
+        margin-top: 1%;
         margin-bottom: 0.75%;
     }
 
     .charCard-rarity {
         // margin-right: 2.5%;
-        font-size: x-small;
-        margin-top: 2%;
+        font-size: 9px; // 10 px
+        // margin-top: 1%;
         margin-bottom: 0.75%;
         font-weight: 200;
     }
 
     .charCard-id {
         // margin-right: 2.5%;
-        font-size: x-small;
-        margin-top: 2%;
+        font-size: 9px; // 10 px 
+        margin-top: 1%;
         margin-bottom: 0.75%;
         text-transform: none;
         font-weight: 200;
-
     }
 
 }
@@ -149,7 +149,7 @@
 }
 
 .card-cost {
-    width: 275px;
+    width: $cardWidth;
     font-size: 3.5vh;
 }
 
@@ -177,12 +177,10 @@
     top: 77.5%;
     left: 67.5%;
     transition: .5s ease;
-    transform: scale(55%);
+    transform: scale(41.5%);
 
     &:hover {
         filter: opacity(90%);
         transition: .5s ease;
     }
-
-
 }
