--- a/client/src/index.css
+++ b/client/src/index.css
@@ -629,8 +629,8 @@
   perspective: 600px;
   cursor: pointer;
   background-color: rgb(109, 109, 109);
-  width: 275px;
-  height: 375px;
+  width: 235px;
+  height: 340px;
   border-radius: 5px;
   transition: 0.5s ease;
   text-transform: uppercase;
@@ -653,34 +653,32 @@
   color: rgba(255, 255, 255, 0.584);
 }
 .charCard .charCard-image {
-  height: 305px;
-  width: 275px;
+  height: 285px;
+  width: 235px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  margin-bottom: 5%;
+  margin-bottom: 3.25%;
   filter: grayscale(100%);
   border-bottom: 3px solid rgba(255, 255, 255, 0.584);
 }
 .charCard .charCard-text {
   align-self: flex-start;
   margin-left: 2.5%;
-  font-size: smaller;
   cursor: default;
 }
 .charCard .charCard-name {
-  font-size: small;
-  margin-top: 2%;
+  font-size: 13px;
+  margin-top: 1%;
   margin-bottom: 0.75%;
 }
 .charCard .charCard-rarity {
-  font-size: x-small;
-  margin-top: 2%;
+  font-size: 9px;
   margin-bottom: 0.75%;
   font-weight: 200;
 }
 .charCard .charCard-id {
-  font-size: x-small;
-  margin-top: 2%;
+  font-size: 9px;
+  margin-top: 1%;
   margin-bottom: 0.75%;
   text-transform: none;
   font-weight: 200;
@@ -741,7 +739,7 @@
 }
 
 .card-cost {
-  width: 275px;
+  width: 235px;
   font-size: 3.5vh;
 }
 
@@ -764,7 +762,7 @@
   top: 77.5%;
   left: 67.5%;
   transition: 0.5s ease;
-  transform: scale(55%);
+  transform: scale(41.5%);
 }
 .qrcode:hover {
   filter: opacity(90%);
@@ -883,7 +881,7 @@
   justify-content: space-around;
   flex-wrap: wrap;
   align-content: space-evenly;
-  width: 70%;
+  width: 80%;
   z-index: 99;
 }
 
@@ -1712,12 +1710,11 @@
   top: 77.5%;
   left: 67.5%;
   transition: 0.5s ease;
-  transform: scale(55%);
+  transform: scale(41.5%);
 }
 .qrcode-info:hover {
   filter: opacity(90%);
   transition: 0.5s ease;
-  transform: scale(55%);
 }
 
 .pack {
